# mitiq

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  docs-build.yml  publish-pypi.yml
docs/: CONTRIBUTING_DOCS.md  Makefile
docs/source/: apidoc.md  conf.py  refs.bib
docs/source/examples/: cdr_qrack.md  cirq-ibmq-backends.md  ddd_on_ibmq_ghz.md  examples.md  ibmq-backends.md  pennylane-ibmq-backends.md  quantum_simulation_scars_ibmq.md  ucc.md
docs/source/examples/mitiq-paper/: mitiq-paper-codeblocks.md
docs/source/guide/: guide.md  vd-1-intro.md  vd-2-use-case.md  vd-3-options.md  vd-4-low-level.md  vd-5-theory.md  vd.md
mitiq/ddd/: ddd.py
mitiq/pea/: sample_amplifications.py
mitiq/pea/amplifications/: amplify_depolarizing.py
mitiq/pea/amplifications/tests/: test_amplify_depolarizing.py
mitiq/pea/tests/: test_sample_amplifications.py
mitiq/pec/: sampling.py
mitiq/pec/representations/: learning.py
mitiq/qse/: qse.py  qse_utils.py
mitiq/vd/: vd.py
mitiq/zne/: inference.py
mitiq/zne/tests/: test_inference.py
requirements/: requirements-braket.txt  requirements-cirq.txt  requirements-dev.txt  requirements-pennylane.txt  requirements-pyquil.txt  requirements-qibo.txt  requirements-qiskit.txt  requirements.txt
